--- a/style.css
+++ b/style.css
@@ -106,18 +106,24 @@ input, select {
 .main-wrapper{
     margin: 0 auto;
     width: 1000px;
+    height: 80px;
+}
+nav{
+
 }
 a{
     text-decoration: none;
 }
 body{
-    background-color: #ccc;
-
+    /*background-image: url("https://wallpapertag.com/wallpaper/full/1/a/6/230299-beautiful-grey-backgrounds-1920x1200-for-mobile.jpg");*/
+    background-color: #f3f3f3;
 }
 header nav{
     width: 100%;
-    background-color: white;
-    height: 60px;
+    /*background-image: url("https://wallpapertag.com/wallpaper/full/1/a/6/230299-beautiful-grey-backgrounds-1920x1200-for-mobile.jpg");*/
+    background-color: #f3f3f3;
+    border-bottom: 1px ridge lightgray;
+    height: 80px;
 }
 header nav ul{
     float: left;
@@ -134,6 +140,10 @@ header nav ul li a{
 }
 header .nav-login{
     float: right;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 header .nav-login form{
     float: left;
@@ -171,7 +181,7 @@ header .nav-login form button:hover{
 header .nav-login a{
     border: none;
     width: 60px;
-    height: 60px;
+    height: 80px;
     float: left;
     font-family: Arial;
     font-size: 16px;
@@ -179,10 +189,17 @@ header .nav-login a{
     line-height: 63px;
     display: block;
     cursor: pointer;
-
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   padding-top: 15px;
 }
 .main-container{
-    padding-top: 40px;
+    padding-top: 100px;
+    margin: 0 auto;
+    width: 1000px;
+
 
 }
 .main-container h2{
@@ -191,6 +208,16 @@ header .nav-login a{
     font-size: 40px;
     color: #111;
     text-align: center;
+}
+.main-container a{
+    line-height: 50px;
+    font-family: Arial;
+    font-size: 30px;
+}
+.main-container h3{
+    line-height: 50px;
+    font-size: 30px;
+    font-family: Arial;
 }
 
 /*signup.php*/
@@ -231,4 +258,187 @@ header .nav-login a{
 
     display: flex;
     justify-content: center;
+}
+/*header*/
+
+.header{
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 400px;
+    height: 80px;
+    justify-content: space-between;
+    font-family: sans-serif;
+
+}
+h1 {
+    font-size: 40px;
+    color: #000;
+}
+.download a{
+    margin: 0 auto;
+    align-items: center;
+}
+.download h3{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+video{
+    margin-top: 40px;
+    padding-bottom: 100px;
+}
+.wrapper h2{
+    line-height: 50px;
+    font-family: Arial;
+    font-size: 40px;
+    color: #111;
+    text-align: center;
+    padding-top: 100px;
+}
+.wrapper img{
+    width: 929px;
+    margin-left: 36px;
+    padding-top: 40px;
+    padding-bottom: 100px;
+}
+.wrapper{
+}
+.project{
+    border-top: 1px ridge lightgray;
+    border-bottom: 1px ridge lightgray;
+
+
+}
+.main-project{
+    margin: 0 auto;
+    width: 1000px;
+}
+.footer{
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+}
+.container-footer{
+    padding-top: 30px;
+    background-color: lightgray;
+}
+.footer h4{
+    font-size: 1.1em;
+}
+.footers{
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+.footers h4 {
+    padding-bottom: 10px;
+
+}
+.footers h5{
+    opacity: 0.6;
+}
+.container-voorwaarden{
+    margin: 0 auto;
+    width: 1000px;
+    padding-top: 100px;
+    padding-bottom: 290px;
+}
+.container-voorwaarden h2{
+    padding-bottom: 50px;
+}
+.container-voorwaarden p{
+    margin: 0 auto;
+    font-size: 1.2em;
+    text-align: center;
+}
+.middle{
+    text-align: center;
+    padding-top: 300px;
+}
+.middle h5{
+    text-align: center;
+    font-size: 1.1em;
+}
+.Termslink a{
+    font-size: 10px;
+}
+@media only screen and (max-width: 1000px) {
+    .main-container{
+        width: 100%;
+    }
+    .main-wrapper{
+        width: 100%;
+    }
+    header .nav-login a{
+        font-size: 0.8em;
+    }
+    .main-wrapper h3{
+        text-align: center;
+        font-size: 20px;
+    }
+    .main-wrapper a{
+        font-size: 20px;
+    }
+    .hero{
+        width: 100%;
+    }
+    .hero video{
+        width: 95%;
+        height: 95%;
+    }
+    .project{
+        width: 100%;
+    }
+    .project h2{
+         width: 100%;
+         text-align: center;
+         font-size: 20px;
+     }
+    .project img{
+        width: 80%;
+        height: 80%;
+    }
+    .project h2{
+        width: 100%;
+        text-align: left;
+        margin-left: 130px;
+        font-size: 30px;
+    }
+    .project img{
+        margin-left: 10px;
+        width: 40%;
+        height: 50%;
+        /*width: 80%;*/
+        /*height: 80%;*/
+    }
+    .wrapper{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 840px) {
+    .project h2{
+        width: 100%;
+        text-align: left;
+        margin-left: 130px;
+        font-size: 30px;
+    }
+    .project img{
+        margin-left: 10px;
+        width: 40%;
+        height: 50%;
+        /*width: 80%;*/
+        /*height: 80%;*/
+    }
+    .footer{
+        width: 100%;
+    }
+}
+.container-footer{
+    margin-top: 207px;
+
 }
