complete php met pdo

--- a/style.css
+++ b/style.css
@@ -209,6 +209,13 @@ header .nav-login a{
     color: #111;
     text-align: center;
 }
+.main-container h4{
+    line-height: 50px;
+    font-family: Arial;
+    font-size: 20px;
+    color: #111;
+    text-align: center;
+}
 .main-container a{
     line-height: 50px;
     font-family: Arial;
